# Library_BackendProject

./: .env  .gitignore  docker-compose.yml  fastapi.Dockerfile  pyproject.toml
migration/: env.py
migration/versions/: 00fbaa7ebb3b_add_trigger_to_authors_book.py  03b13ad5ee7f_initial.py  15f8b2c5d867_add_foreign_keys.py  291f6fe7f3f4_unique_inn_in_publisher_table.py  3d8ecddda7e7_add_all_tables.py  479ff2deaa8f_add_url_to_genres.py  51d24d14e27f_add_admin.py  7113170b55c0_add_role.py  8c521a3847f0_add_supply_view.py  af774006a0a3_add_penalty_view.py  b968bd354189_add_views.py  c2d8484989ad_add_supply_view_triggers.py  e93fab54ebcd_add_password.py  f0e7dbc81a81_add_order_view.py  fd394ec2d8ae_add_triggers_to_book_reader.py
migration/versions/versions/: 9172910b9ae7_initial.py
scripts/: create_authors.sql  create_books.sql  create_readers.sql  init.sql
src/: main.py
src/api/: routes.py
src/core/: config.py
src/db/postgres/: database.py
src/models/: author.py  book.py  genre.py  publisher.py  reader.py
src/project/api/: authors.py  authorsBook.py  bookGenres.py  bookInstance.py  bookPublisher.py  bookReader.py  book_view.py  books.py  depends.py  genres.py  penalty.py  publishers.py  readers.py  routes.py
src/project/core/: config.py
src/project/models/: __init__.py  author.py  authorsBook.py  book.py  bookGenres.py  bookInstance.py  bookPublisher.py  bookReader.py  genre.py  penalty.py  publisher.py  reader.py  viewBook.py
src/project/schemas/: authorSchema.py  authorsBookSchema.py  authorsSchema.py  bookSchema.py  (+14 more)
src/schemas/: readersSchema.py
(+37 files in other folders)
